WIP: Another part
// FIXME: describe or merge

Change-Id: I5335857d3bab97b4993660dcca4dc7b6c52c2d34
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>